--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main>
     <section id="about" class="container">
       <h2>About Me</h2>
-      <p>Hi, I'm Sandesh Padwal, a first-year Software Engineering student at [Your University]. I'm passionate about technology and eager to learn and grow in the field of software development.</p>
+      <p>Hi, I'm Sandesh Padwal, a first-year Software Engineering student at MITAoE. I'm passionate about technology and eager to learn and grow in the field of software development.</p>
       <p><strong>Education:</strong> MIT Academy Of Engineering, B.Tech in Software Engineering, 1st Year.</p>
       <p><strong>Interests:</strong> Web Development , Artificial Intelligence</p>
     </section>
